# sim-generator

./: .gitignore  CMakeLists.txt
Resource/: TestCase1.xml  bc_message.xml  config.xml
source/: CMakeLists.txt  config.h  main.cpp
source/communication/: AceBCMessage.h  AceDevice.h  AceTestMessage.h  BU67103x.cpp  BU67103x.h  c1553Device.h
source/loader/: BcMessageLoader.h  ConfigLoader.h  TestCaseLoader.h
